--- a/styles/styles.css
+++ b/styles/styles.css
@@ -57,11 +57,17 @@ nav a {
 
 header {
     background-color: #FFF8F3;
+    background-image: url('../images/header_bg.png');
+    background-repeat: no-repeat;
+    background-position: bottom right;
 }
 
 .banner {
-    padding: 30px 30px 30px 150px;
+    padding: 30px 30px 0px 150px;
     display: flex;
+}
+.banner-content{
+    width: 585px;
 }
 
 .profil-pic {
@@ -70,3 +76,25 @@ header {
 
 
 }
+
+.banner-greeding {
+    font-size: 45px;
+    margin-bottom: 5px;
+}
+
+.banner-title {
+    font-size: 85px;
+    font-weight: 700;
+    margin-top: 0px;
+    margin-bottom: 0px;
+}
+
+.banner-description {
+    font-size: 18px;
+    font-weight: 400;
+    margin-top: 20px;
+
+}
+
+/* main section */
+
